--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Test</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link href="styles.css" rel="stylesheet">
+    <link href="public/style/styles.css" rel="stylesheet">
     <link rel="stylesheet" href="jquery-ui-1.12.1/jquery-ui.min.css">
 </head>
 <body>
@@ -99,6 +99,19 @@
         </div>
     </div>
 </section>
+
+<!-- Login dialog overlay -->
+<div id="dialog" title=" ">
+    <div class="page-header">
+        <h3>Logga in</h3>
+    </div>
+
+    <form method="post" action="index.html">
+        <p><input type="text" name="login" value="" placeholder="Användarnamn"></p>
+        <p><input type="password" name="password" value="" placeholder="Lösenord"></p>
+        <p class="submit"><input type="submit" name="commit" value="Logga in"></p>
+    </form>
+</div>
 
 <!-- Footer -->
 <footer class="navbar navbar-inverse navbar-fixed-bottom">
