--- a/public/js/test.html
+++ b/public/js/test.html
@@ -7,6 +7,6 @@
 </head>
 <body>
 <h1 id="test"></h1>
-<script type="text/javascript">timer("test")</script>
+<script type="text/javascript">timer("test", 1)</script>
 </body>
 </html>
