--- a/public/js/test.html
+++ b/public/js/test.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="timer.js"></script>
+    <script src="testDate.js"></script>
 </head>
 <body>
 <h1 id="test"></h1>
-<script type="text/javascript">timer("test", 1)</script>
+<script type="text/javascript">controlDate("2017-06-01", "test")</script>
 </body>
 </html>
